--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ langchain==0.1.6
 langchain-google-genai==0.0.9
 google-generativeai>=0.3.1
 faiss-cpu==1.7.4
-streamlit
+streamlit==1.12.0
 python-dotenv==1.0.0
 pypdf==4.0.1
 tiktoken==0.5.2
 langchain-community==0.0.19
 pydantic==2.5.2
 gitpython==3.1.41
+altair==4.2.2
